--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,7 @@
 
 .Kalend__Calendar__root {
   display: flex;
-  width: 100%;
+  width: inherit;
   height: 100%;
   flex-direction: column;
   font-size: 10px;
