--- a/src/components/eventButton/EventButton.scss
+++ b/src/components/eventButton/EventButton.scss
@@ -78,6 +78,17 @@
   cursor: grab !important;
 }
 
+.Kalend__EventButton__resizing_wrapper {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: transparent;
+  z-index: 99;
+  cursor: n-resize;
+}
+
 @keyframes Kalend__EventDetailHeader_animationShow {
   0% {
     visibility: hidden;
