--- a/src/components/eventButton/EventButton.scss
+++ b/src/components/eventButton/EventButton.scss
@@ -63,12 +63,15 @@
 
   &-showMoreMonth {
     @extend .Kalend__Event-month;
-    height: 20px !important;
+    height: 17px !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    padding-left: 1px !important;
     //width: 100%;
-    justify-content: flex-start;
-    align-items: center;
-    margin-bottom: 4px;
-    padding: 2px;
+    //justify-content: flex-start;
+    //align-items: center;
+    margin-bottom: 2px !important;
+    //padding: 2px;
   }
 }
 
