Fix text position in event

--- a/src/components/eventButton/components/eventTime/EventTime.scss
+++ b/src/components/eventButton/components/eventTime/EventTime.scss
@@ -14,7 +14,7 @@
 
 .Kalend__Event__time__type {
   &-normal {
-    padding: 1px;
+    //padding: 1px;
 
     &-dark {
       @extend .Kalend__Event__time__type-normal;
